# namescan

./: .gitignore  .travis.yml  Makefile.am  README.md  cmdline.c  cmdline.h  config.h  configure.ac  dns.c  dns.h  fingerprint.c  fingerprint.h  list.c  list.h  log.c  log.h  main.c  millerrabin.c  millerrabin.h  radar.c  radar.h  scanner.c  scanner.h  sock.c  sock.h
.github/workflows/: compile.yml
